syntax = "proto3";

package nftmeta.v1.block;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/nftmeta/v1/block";
import "web3eye/web3eye.proto";
import "web3eye/basetype/v1/chain.proto";

service Manager {
  rpc CreateBlock(CreateBlockRequest) returns (CreateBlockResponse) {}
  rpc CreateBlocks(CreateBlocksRequest) returns (CreateBlocksResponse) {}
  rpc UpsertBlock(UpsertBlockRequest) returns (UpsertBlockResponse) {}
  rpc UpdateBlock(UpdateBlockRequest) returns (UpdateBlockResponse) {}
  rpc GetBlock(GetBlockRequest) returns (GetBlockResponse) {}
  rpc GetBlockOnly(GetBlockOnlyRequest)
      returns (GetBlockOnlyResponse) {}
  rpc GetBlocks(GetBlocksRequest) returns (GetBlocksResponse) {}
  rpc ExistBlock(ExistBlockRequest) returns (ExistBlockResponse) {}
  rpc ExistBlockConds(ExistBlockCondsRequest)
      returns (ExistBlockCondsResponse) {}
  rpc CountBlocks(CountBlocksRequest) returns (CountBlocksResponse) {}
  rpc DeleteBlock(DeleteBlockRequest) returns (DeleteBlockResponse) {}
}

message BlockReq {
  optional string ID = 10;
  optional chain.ChainType ChainType = 20;
  optional string ChainID = 30;
  optional uint64 BlockNumber = 40;
  optional string BlockHash = 50;
  optional int64 BlockTime = 60;
  optional chain.BlockParseState ParseState = 70;
  optional string Remark = 80;
}

message Block {
  string ID = 10;
  chain.ChainType ChainType = 20;
  string ChainID = 30;
  uint64 BlockNumber = 40;
  string BlockHash = 50;
  int64 BlockTime = 60;
  chain.BlockParseState ParseState = 70;
  string Remark = 80;
}

message Conds {
  web3eye.StringVal ID = 10;
  web3eye.StringVal ChainType = 20;
  web3eye.StringVal ChainID = 30;
  web3eye.Uint64Val BlockNumber = 40;
  web3eye.StringVal BlockHash = 50;
  web3eye.Int64Val BlockTime = 60;
  web3eye.StringVal ParseState = 70;
  web3eye.StringVal Remark = 80;
  web3eye.StringSliceVal IDs = 160;
}

message CreateBlockRequest { BlockReq Info = 10; }

message CreateBlockResponse { Block Info = 10; }

message UpsertBlockRequest { BlockReq Info = 10; }

message UpsertBlockResponse { Block Info = 10; }

message CreateBlocksRequest { repeated BlockReq Infos = 10; }

message CreateBlocksResponse { repeated Block Infos = 10; }

message GetBlockRequest { string ID = 10; }

message GetBlockResponse { Block Info = 10; }

message GetBlocksRequest {
  Conds Conds = 10;
  int32 Offset = 20;
  int32 Limit = 30;
}

message GetBlocksResponse {
  repeated Block Infos = 10;
  uint32 Total = 20;
}

message GetBlockOnlyRequest { Conds Conds = 10; }

message GetBlockOnlyResponse { Block Info = 10; }

message UpdateBlockRequest { BlockReq Info = 10; }

message UpdateBlockResponse { Block Info = 10; }

message ExistBlockRequest { string ID = 10; }

message ExistBlockResponse { bool Exist = 10; }

message ExistBlockCondsRequest { Conds Conds = 10; }

message ExistBlockCondsResponse { bool Exist = 10; }

message CountBlocksRequest { Conds Conds = 10; }

message CountBlocksResponse { uint32 Info = 10; }

message DeleteBlockRequest { string ID = 10; }

message DeleteBlockResponse { Block Info = 10; }
