syntax = "proto3";

package nftmeta.v1.chain1;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/nftmeta/v1/chain";
import "web3eye/web3eye.proto";
import "web3eye/basetype/v1/chain.proto";

service Manager {
  rpc CreateChain(CreateChainRequest) returns (CreateChainResponse) {}
  rpc CreateChains(CreateChainsRequest)
      returns (CreateChainsResponse) {}
  rpc UpdateChain(UpdateChainRequest) returns (UpdateChainResponse) {}
  rpc GetChain(GetChainRequest) returns (GetChainResponse) {}
  rpc GetChainOnly(GetChainOnlyRequest)
      returns (GetChainOnlyResponse) {}
  rpc GetChains(GetChainsRequest) returns (GetChainsResponse) {}
  rpc ExistChain(ExistChainRequest) returns (ExistChainResponse) {}
  rpc ExistChainConds(ExistChainCondsRequest)
      returns (ExistChainCondsResponse) {}
  rpc DeleteChain(DeleteChainRequest) returns (DeleteChainResponse) {}
}

message ChainReq {
  optional uint32 ID = 10;
  optional string EntID = 11;
  optional chain.ChainType ChainType = 20;
  optional string ChainID = 30;
  optional string Simbol = 40;
  optional string Remark = 50;
}

message Chain {
  uint32 ID = 10;
  string EntID = 11;
  chain.ChainType ChainType = 20;
  string ChainID = 30;
  string Simbol = 40;
  string Remark = 50;
}

message Conds {
  web3eye.Uint32Val ID = 10;
  web3eye.StringVal EntID = 11;
  web3eye.Uint32Val ChainType = 20;
  web3eye.StringVal ChainID = 30;
  web3eye.StringVal Simbol = 40;
  web3eye.StringVal Remark = 50;
  web3eye.StringSliceVal EntIDs = 160;
}

message CreateChainRequest { ChainReq Info = 10; }
message CreateChainResponse { Chain Info = 10; }

message CreateChainsRequest { repeated ChainReq Infos = 10; }
message CreateChainsResponse { repeated Chain Infos = 10; }

message GetChainRequest { uint32 ID = 10; }
message GetChainResponse { Chain Info = 10; }

message GetChainsRequest {
  Conds Conds = 10;
  int32 Offset = 20;
  int32 Limit = 30;
}

message GetChainsResponse {
  repeated Chain Infos = 10;
  uint32 Total = 20;
}

message GetChainOnlyRequest { Conds Conds = 10; }
message GetChainOnlyResponse { Chain Info = 10; }

message UpdateChainRequest { ChainReq Info = 10; }
message UpdateChainResponse { Chain Info = 10; }

message ExistChainRequest { uint32 ID = 10; }
message ExistChainResponse { bool Exist = 10; }

message ExistChainCondsRequest { Conds Conds = 10; }
message ExistChainCondsResponse { bool Exist = 10; }

message DeleteChainRequest { uint32 ID = 10; }
message DeleteChainResponse { Chain Info = 10; }
